# pdf-chat-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: server.py  utils.py
src/chains/: simple_rag.py
src/templates/: main.html.jinja
